# rs-json-filter-cel

./: Cargo.toml  README.md  build.sh  example.sh  json-filter-cel  json-filter-cel.wasm  wasi.sh
src/: lib.rs
