[package]
name = "rs-json-filter-cel"
version = "0.1.0"
edition = "2024"

description = "Prints the filtered json documents using CEL"
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-json-filter-cel"
homepage = "https://github.com/takanoriyanagitani/rs-json-filter-cel"
documentation = "https://docs.rs/rs-json-filter-cel/latest"
keywords = ["json", "jsonl", "ndjson", "cel", "filter"]
categories = ["command-line-utilities"]

exclude = [
	"json-filter-cel",
	"json-filter-cel.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[[bin]]
name = "json-filter-cel"

[dependencies.clap]
version = "4"
default-features = false
features = [
	"color",
	"error-context",
	"help",
	"std",
	"suggestions",
	"usage",
	"derive",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
	"std",
]

[dependencies.cel]
version = "0"
default-features = false
features = [
	"chrono",
	"regex",
	"json",
]
